TAG: dlautils-4-4-0-1
DATE: 10/13/2010
STAFF: dbm
CHANGES:
1) loadQueueReport.py: modified to make it stop printing duplicate
   "No Files Queued" messages when there are multiple file types per
   job stream.

TAG: dlautils-4-3-3-1
DATE: 03/11/2010
STAFF: dbm
CHANGES: merge tr10086 branch to trunk

TAG: dlautils-tr10086-1
DATE: 02/19/2010
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: Removed the RADAR DB Schema argument from the
   calls to startJobStream (preload) and stopJobStream (postload)

TAG: dlautils-tr10086-BP
DATE: 02/18/2010
STAFF: dbm
RELEASE: Development
CHANGES: Branch point tag for TR10086

TAG: dlautils-4-2-0-6
DATE: 07/17/2009
STAFF: sc
CHANGES: TR9718 - GBRecordSplitter updated to determine
  end of ORGANISM section using '.' since not all RefSeq
  records have the 'required' REFERENCE section.

TAG: dlautils-4-2-0-5
DATE: 04/23/2009
STAFF: sc
CHANGES: JobStreamTemplate.sh updated to use checkStatus

TAG: dlautils-4-2-0-4
TAG: dlautils-4-2-0-3
DATE: 03/17/2009
STAFF: sc
CHANGES:
1) DBCleanser - removed '-x'
2) JobStreamTemplate.sh - updated 
3) removed old cvs directives and copyrights

TAG: dlautils-4-2-0-2
DATE: 02/03/2009
STAFF: lec
CHANGES:
1) TR9451; add DBCleanser (originally in seqdb_engine)

TAG: dlautils-4-2-0-1
DATE: 01/27/2009
STAFF: lec
CHANGES:
1) TR9451; add fastaDupRemover.awk (originally in seqdb_engine)

TAG: dlautils-3-5-4-2
DATE: 10/11/2007
STAFF: dbm
CHANGES:
1) Added -x option to DLAInstall script

TAG: dlautils-3-5-4-1
DATE: 8/9/2007
STAFF: dbm
CHANGES:
1) Fixed bug where Configuration.default was set up for C-shell.

TAG: dlautils-3-5-1-5
DATE: 2/9/2007
STAFF: dbm
CHANGES:
1) Added fileSize to load queue report

TAG: dlautils-3-5-1-4
DATE: 11/15/2006
STAFF: dbm
CHANGES:
1) Removed code that copies index.html to /data/loads/... directory.

TAG: dlautils-3-5-1-3
DATE: 11/08/2006
STAFF: dbm
CHANGES:
1) Added Configuration.default, loadQueueReport.py, loadQueueReport.sh

TAG: dlautils-3-5-1-2
DATE: 11/03/2006
STAFF: sc